fixed sound distance, mapreload vote
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1488 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/CubeMS/web.config
+++ b/ac/source/CubeMS/web.config
@@ -16,8 +16,8 @@
     <add key="ClientScriptCacheMinutes" value="0"/>
   </appSettings>
   <connectionStrings>
-    <add name="CubeMS" connectionString="Data Source=ADRIAN\SQLEXPRESS;Initial Catalog=k0890;Integrated Security=True;Pooling=False"
-      providerName="System.Data.SqlClient" />
+    <!--<add name="CubeMS" connectionString="Data Source=ADRIAN\SQLEXPRESS;Initial Catalog=k0890;Integrated Security=True;Pooling=False" providerName="System.Data.SqlClient" />-->
+    <add name="CubeMS" connectionString="Data Source=IMVSRV52;Initial Catalog=k0890;UserId=k0890db;Password=99ABrx77-" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <!-- 
