sound fx for bulletholes
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1489 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -1,6 +1,8 @@
 registersound "player/jump"         //S_JUMP
 registersound "player/step" 60      // S_SOFTLAND
 registersound "player/land" 40      // S_HARDLAND
+registersound "weapon/clip_empty"   // S_BULLETBOUNCE   TODO:NEW SOUND
+registersound "weapon/clip_empty"   // S_BULLETAIR      TODO:NEW SOUND
 registersound "weapon/knife"        //S_KNIFE
 registersound "weapon/usp"          //S_PISTOL
 registersound "weapon/pistol_reload"           //S_RPISTOL
@@ -29,9 +31,6 @@ registersound "player/die2"         //S_DIE2
 registersound "weapon/grenade_exp"           //S_FEXPLODE
 registersound "player/splash1"      //S_SPLASH1
 registersound "player/splash2"      //S_SPLASH2
-registersound "ppm/deathr"          //S_GRUNT1 16
-registersound "ppm/paine"           //S_GRUNT2
-registersound "ppm/deathe"         //S_RUMBLE
 registersound "ctf/flagdrop"       //S_FLAGDROP
 registersound "ctf/flagpickup"      //S_FLAGPICKUP
 registersound "ctf/flagreturn"      //S_FLAGRETURN
