*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1504 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_toxic.cfg
+++ b/ac/packages/maps/ac_toxic.cfg
@@ -16,7 +16,7 @@ mapmodelreset // start @ zero
 
 mapmodel 1 30 0 0 "nothing"		//0 @ Fences have been clipped so you can't
 					//  @ jump on top of them.
-mapmodel 3  1 0 0 "comp_bridge"		//1
+mapmodel 3  1 0 0 "bridge"		//1 @ Adaption of new bridge AND complex bridge are in this map.
 mapmodel 0 7 0 0 "ladder_7x"		//2
 mapmodel 0 8 0 0 "ladder_8x"		//3
 mapmodel 0 10 0 0 "ladder_10x"		//4
@@ -76,6 +76,8 @@ mapmodel 0 0 0 0 "flyer"		//54
 mapmodel 0 0 0 0 "poster"		//55 mind z-buffer issues on 16bit!
 mapmodel 1 1 0 0 "aard"			//56 @ Clipped now, so that you go over the box, not through it.
 mapmodel 0 8 0 0 "nothing"		//57 @ Clipping of "0 8 0 0" used for fences/posts/gates.
+mapmodel 3  1 0 0 "comp_bridge"		//58
+
 
 
 // skybox for this map - check /packages/skymaps/
@@ -386,3 +388,7 @@ texture 0 "./zastrow/wood_crate_12.jpg"
 texture 0 "./makke/box_2.jpg"
 texture 0 "./makke/box_4.jpg"
 texture 0 "./makke/box_3.jpg"           //241
+
+
+//wotwots urban textures
+texture 0 "wotwot/urban/manhole1.jpg"  
