firstrun script, new menu items, lanconnect fix
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1512 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -14,6 +14,112 @@ menuitem "About"			        "showmenu about"
 menuitem "Quit"						"quit"
 
 
+newmenu "quick setup"
+
+menuitemtextinput "nickname: " "unnamed" [
+    if (= $arg1 0) [ alias new_name $arg2 ] []
+]
+menuitemtextinput "screen width: " "$scr_w" [
+    if (= $arg1 0) [ alias new_scr_w $arg2 ] []
+]
+menuitemtextinput "screen height: " "$scr_h" [
+    if (= $arg1 0) [ alias new_scr_h $arg2 ] []
+]
+menuitemslider "mouse sensitivity: "2 100 "($sensitivity)" 2 "" [
+    if (= $arg1 0) [] [ alias new_sensitivity $arg3 ]
+]
+menuitemslider "graphics quality: " 1 4 "(getgfxq; $gfxq)" 1 "low medium good awesome" [
+    if (= $arg1 0) [] [ alias new_gfx_quality $arg3 ]
+]
+menuitemslider "sound quality: " 1 3 "(getsoundq; $soundq)" 1 "low medium good" [
+    if (= $arg1 0) [] [ alias new_sound_quality $arg3 ]
+]
+menuitem "OK" [
+    name $new_name
+    sensitivity $new_sensitivity
+
+    scr_w $new_scr_w
+    scr_h $new_scr_h    
+
+    if (= $new_gfx_quality 4) [ // awesome gfx quality
+        minlod 200
+        fpsrange 100 1000
+        watersubdiv 2
+        dynlight 16
+        waterrefract 1
+        dynshadow 40
+        lighterror 1
+        fsaa 16
+    ] [
+        if (= $new_gfx_quality 3) [ // high
+            minlod 100
+            fpsrange 60 60
+            watersubdiv 2
+            dynlight 16
+            waterrefract 1
+            dynshadow 40
+            lighterror 4
+            fsaa 4
+        ] [
+            if (= $new_gfx_quality 2) [ // medium
+                minlod 60
+                fpsrange 30 40
+                watersubdiv 4
+                dynlight 16
+                waterrefract 1
+                dynshadow 40
+                lighterror 4
+                fsaa 0
+            ] [                 // poor
+                minlod 25
+                fpsrange 20 25
+                watersubdiv 16
+                dynlight 0
+                waterrefract 0
+                dynshadow 0
+                lighterror 10
+                fsaa 0
+            ]
+        ]
+    ]
+        
+    if (= $new_sound_quality 3) [ // high sound
+        soundchans 64
+        maxsoundsatonce 15
+        soundbufferlen 1024
+    ] [
+        if (= $new_sound_quality 2) [ // medium
+            soundchans 32
+            maxsoundsatonce 5
+            soundbufferlen 1024
+        ] [                         // low
+            soundchans 32
+            maxsoundsatonce 5
+            soundbufferlen 2048 // causes sound lag while reducing cpu load
+        ]
+    ]
+    
+    showmenu restart
+]
+
+alias getgfxq [
+    if (= $minlod 200) [ alias gfxq 4 ] [
+        if (= $minlod 100) [ alias gfxq 3 ] [
+            if (= $minlod 60) [ gfxq 2 ] [ gfxq 1 ]
+        ]
+    ]
+]
+
+alias getsoundq [
+    if (= $soundchans 64) [ alias soundq 3 ] [
+        if (= $soundbufferlen 1024) [ alias soundq 2 ] [ alias soundq 1 ]
+    ]
+]
+
+newmenu restart
+menuitem "You need to restart AssaultCube" "quit"
+
+
 // menumdl path anim rotation-speed{0..100} scale{0..100}
 // chmenumdl menuname newpath
 
@@ -486,7 +592,7 @@ menuitem "subdivision 16 (my 486 can do water too)" "watersubdiv 16"
 
 newmenu dynlight
 
-menuitem "enable dynamic light/shadows"                           "dynlight 1"
+menuitem "enable dynamic light/shadows"                           "dynlight 16"
 menuitem "disable dynamic light/shadows"                           "dynlight 0"
 
 newmenu "water reflection"
@@ -501,7 +607,7 @@ menuitem "disable dynamic player shadows"    "dynshadow 0"
 
 newmenu about
 
-menuitem "AssaultCube v0.93" ""
+menuitem "AssaultCube v0.94" ""
 menuitem ""
 menuitem "                     ...help"		"showmenu help"
 menuitem "                     ...credits"	"showmenu credits"
