--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -34,6 +34,21 @@ menuitemslider "graphics quality: " 1 4 "(getgfxq; $gfxq)" 1 "low medium good aw
 menuitemslider "sound quality: " 1 3 "(getsoundq; $soundq)" 1 "low medium good" [
     if (= $arg1 0) [] [ alias new_sound_quality $arg3 ]
 ]
+
+alias getgfxq [
+    if (= $minlod 200) [ alias gfxq 4 ] [
+        if (= $minlod 100) [ alias gfxq 3 ] [
+            if (= $minlod 60) [ alias gfxq 2 ] [ alias gfxq 1 ]
+        ]
+    ]
+]
+
+alias getsoundq [
+    if (= $soundchans 64) [ alias soundq 3 ] [
+        if (= $soundbufferlen 1024) [ alias soundq 2 ] [ alias soundq 1 ]
+    ]
+]
+
 menuitem "OK" [
     name $new_name
     sensitivity $new_sensitivity
@@ -100,20 +115,6 @@ menuitem "OK" [
     ]
     
     showmenu restart
-]
-
-alias getgfxq [
-    if (= $minlod 200) [ alias gfxq 4 ] [
-        if (= $minlod 100) [ alias gfxq 3 ] [
-            if (= $minlod 60) [ gfxq 2 ] [ gfxq 1 ]
-        ]
-    ]
-]
-
-alias getsoundq [
-    if (= $soundchans 64) [ alias soundq 3 ] [
-        if (= $soundbufferlen 1024) [ alias soundq 2 ] [ alias soundq 1 ]
-    ]
 ]
 
 newmenu restart
