--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -74,7 +74,7 @@ alias zoom [
 ]
 
 //bind MOUSE2 [ zoom 1; onrelease [ zoom 0 ] ]
-bind MOUSE2 [ altaction ]
+bind MOUSE2 altaction
 
 // alternative zoom toggle
 //alias ztoggle 0
@@ -102,9 +102,9 @@ alias tosok [ votemap 11 $arg1 ]
 alias modifier 0
 alias domodifier [ alias modifier $arg1; onrelease [ alias modifier 0 ] ]
 
-bind Q [ domodifier 1 ]
-bind Z [ domodifier 2 ]
-bind X [ domodifier 3 ]
+bind Q "domodifier 1"
+bind Z "domodifier 2"
+bind X "domodifier 3"
 
 alias universaldelta [
   if $editing [ alias s "edit" ] [ 
@@ -114,8 +114,8 @@ alias universaldelta [
   s
 ]
 
-bind MOUSE4 [ universaldelta  1 ]
-bind MOUSE5 [ universaldelta -1 ]
+bind MOUSE4 "universaldelta  1"
+bind MOUSE5 "universaldelta -1"
 
 alias delta_edit_0 [ editheight $flrceil $arg1 ]
 alias delta_edit_1 [ if $flrceil [ vdelta $arg1 ] [ vdelta (- 0 $arg1) ] ]
@@ -123,13 +123,8 @@ alias delta_edit_2 [ edittex $flrceil $arg1 ]
 alias delta_edit_3 [ edittex (+ $flrceil 1) $arg1 ]
 alias delta_edit_4 [ equalize $flrceil ]
 alias delta_edit_5 [ entproperty 0 $arg1 ]  // and the others
-
 alias delta_game_0 [ if (= $arg1 1) [ shiftweapon 1 ] [ shiftweapon -1 ] ]
-
 alias delta_spect_0 [ followplayer $arg1 ]
-
-bind KP_MINUS "conskip 1"
-bind KP_PLUS "conskip -1000"
 
 // alternative weapon switching, no more 1-2-3-4 /wheel cycling no finger ever leaving WASD
 //uncomment lines (remove the //) below to activate
@@ -139,7 +134,7 @@ bind KP_PLUS "conskip -1000"
 //bind lalt "melee"
 
 alias timeremain [ echo time remaining: ($minutesremaining) ]
-
+alias toggleshowmap [ showmap 1; onrelease [ showmap 0 ] ]
 
 music ac.ogg
 musicvol 0
@@ -150,3 +145,4 @@ alias start_intermission [
     fade 0
     sleep 10000 [ fade 1 ]
 ]
+
