--- a/ac/config/keymap.cfg
+++ b/ac/config/keymap.cfg
@@ -73,7 +73,7 @@ keymap 117 U "undo"
 keymap 118 V "paste"
 keymap 119 W ""
 keymap 120 X "delent"
-keymap 121 Y ""
+keymap 121 Y "saycommand %"
 keymap 122 Z ""
 keymap 127 DELETE "edittex 0 -1"
 keymap 256 KP0 "weapon 4 1"
@@ -125,7 +125,7 @@ keymap 304 LSHIFT "crouch"
 keymap 305 RCTRL "jump"
 keymap 306 LCTRL "jump"
 keymap 307 RALT ""
-keymap 308 LALT [ showmap 1; onrelease [ showmap 0 ] ]
+keymap 308 LALT "toggleshowmap"
 keymap 309 RMETA ""
 keymap 310 LMETA ""
 keymap 311 LSUPER ""
