--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -14,113 +14,6 @@ menuitem "About"			        "showmenu about"
 menuitem "Quit"						"quit"
 
 
-newmenu "quick setup"
-
-menuitemtextinput "nickname: " "unnamed" [
-    if (= $arg1 0) [ alias new_name $arg2 ] []
-]
-menuitemtextinput "screen width: " "$scr_w" [
-    if (= $arg1 0) [ alias new_scr_w $arg2 ] []
-]
-menuitemtextinput "screen height: " "$scr_h" [
-    if (= $arg1 0) [ alias new_scr_h $arg2 ] []
-]
-menuitemslider "mouse sensitivity: "2 100 "($sensitivity)" 2 "" [
-    if (= $arg1 0) [] [ alias new_sensitivity $arg3 ]
-]
-menuitemslider "graphics quality: " 1 4 "(getgfxq; $gfxq)" 1 "low medium good awesome" [
-    if (= $arg1 0) [] [ alias new_gfx_quality $arg3 ]
-]
-menuitemslider "sound quality: " 1 3 "(getsoundq; $soundq)" 1 "low medium good" [
-    if (= $arg1 0) [] [ alias new_sound_quality $arg3 ]
-]
-
-alias getgfxq [
-    if (= $minlod 200) [ alias gfxq 4 ] [
-        if (= $minlod 100) [ alias gfxq 3 ] [
-            if (= $minlod 60) [ alias gfxq 2 ] [ alias gfxq 1 ]
-        ]
-    ]
-]
-
-alias getsoundq [
-    if (= $soundchans 64) [ alias soundq 3 ] [
-        if (= $soundbufferlen 1024) [ alias soundq 2 ] [ alias soundq 1 ]
-    ]
-]
-
-menuitem "OK" [
-    name $new_name
-    sensitivity $new_sensitivity
-
-    scr_w $new_scr_w
-    scr_h $new_scr_h    
-
-    if (= $new_gfx_quality 4) [ // awesome gfx quality
-        minlod 200
-        fpsrange 100 1000
-        watersubdiv 2
-        dynlight 16
-        waterrefract 1
-        dynshadow 40
-        lighterror 1
-        fsaa 16
-    ] [
-        if (= $new_gfx_quality 3) [ // high
-            minlod 100
-            fpsrange 60 60
-            watersubdiv 2
-            dynlight 16
-            waterrefract 1
-            dynshadow 40
-            lighterror 4
-            fsaa 4
-        ] [
-            if (= $new_gfx_quality 2) [ // medium
-                minlod 60
-                fpsrange 30 40
-                watersubdiv 4
-                dynlight 16
-                waterrefract 1
-                dynshadow 40
-                lighterror 4
-                fsaa 0
-            ] [                 // poor
-                minlod 25
-                fpsrange 20 25
-                watersubdiv 16
-                dynlight 0
-                waterrefract 0
-                dynshadow 0
-                lighterror 10
-                fsaa 0
-            ]
-        ]
-    ]
-        
-    if (= $new_sound_quality 3) [ // high sound
-        soundchans 64
-        maxsoundsatonce 15
-        soundbufferlen 1024
-    ] [
-        if (= $new_sound_quality 2) [ // medium
-            soundchans 32
-            maxsoundsatonce 5
-            soundbufferlen 1024
-        ] [                         // low
-            soundchans 32
-            maxsoundsatonce 5
-            soundbufferlen 2048 // causes sound lag while reducing cpu load
-        ]
-    ]
-    
-    showmenu restart
-]
-
-newmenu restart
-menuitem "You need to restart AssaultCube" "quit"
-
-
 // menumdl path anim rotation-speed{0..100} scale{0..100}
 // chmenumdl menuname newpath
 
@@ -545,6 +438,8 @@ menuitem "V-19 Combat Shotgun"			"nextprimary 2;echo V-19 Combat Shotgun chosen"
 
 newmenu options
 
+menuitem "quick setup.."                                            [showmenu "quick setup"]
+menuitem "keyboard/mouse controls"                                  "showmenu controls"
 menuitem "tweak minlod.. (higher = less popup, possibly lower fps)" "showmenu minlod"
 menuitem "tweak fpsrange.. (higher = possibly more popup)"          "showmenu fpsrange"
 menuitem "tweak water subdivision"                                  "showmenu watersubdiv"
@@ -552,6 +447,140 @@ menuitem "tweak dynamic light/shadows"                              "showmenu dy
 menuitem "tweak water reflection"                                   [showmenu "water reflection"]
 menuitem "tweak dynamic player shadows"                             [showmenu "player shadows"]
 menuitem "tweak gamma"                                              "showmenu gamma"
+
+
+
+newmenu "quick setup"
+
+menuitemtextinput "nickname: " "unnamed" [
+    if (= $arg1 0) [ alias new_name $arg2 ] []
+]
+menuitemtextinput "screen width: " "$scr_w" [
+    if (= $arg1 0) [ alias new_scr_w $arg2 ] []
+]
+menuitemtextinput "screen height: " "$scr_h" [
+    if (= $arg1 0) [ alias new_scr_h $arg2 ] []
+]
+menuitemslider "mouse sensitivity: "2 100 "($sensitivity)" 2 "" [
+    if (= $arg1 0) [] [ alias new_sensitivity $arg3 ]
+]
+menuitemslider "graphics quality: " 1 4 "(getgfxq; $gfxq)" 1 "low medium good awesome" [
+    if (= $arg1 0) [] [ alias new_gfx_quality $arg3 ]
+]
+menuitemslider "sound quality: " 1 3 "(getsoundq; $soundq)" 1 "low medium good" [
+    if (= $arg1 0) [] [ alias new_sound_quality $arg3 ]
+]
+
+alias getgfxq [
+    if (= $minlod 200) [ alias gfxq 4 ] [
+        if (= $minlod 100) [ alias gfxq 3 ] [
+            if (= $minlod 60) [ alias gfxq 2 ] [ alias gfxq 1 ]
+        ]
+    ]
+]
+
+alias getsoundq [
+    if (= $soundchans 64) [ alias soundq 3 ] [
+        if (= $soundbufferlen 1024) [ alias soundq 2 ] [ alias soundq 1 ]
+    ]
+]
+
+menuitem "OK" [
+    name $new_name
+    sensitivity $new_sensitivity
+
+    scr_w $new_scr_w
+    scr_h $new_scr_h    
+
+    if (= $new_gfx_quality 4) [ // awesome gfx quality
+        minlod 200
+        fpsrange 100 1000
+        watersubdiv 2
+        dynlight 16
+        waterrefract 1
+        dynshadow 40
+        lighterror 1
+        fsaa 16
+    ] [
+        if (= $new_gfx_quality 3) [ // high
+            minlod 100
+            fpsrange 60 60
+            watersubdiv 2
+            dynlight 16
+            waterrefract 1
+            dynshadow 40
+            lighterror 4
+            fsaa 4
+        ] [
+            if (= $new_gfx_quality 2) [ // medium
+                minlod 60
+                fpsrange 30 40
+                watersubdiv 4
+                dynlight 16
+                waterrefract 1
+                dynshadow 40
+                lighterror 4
+                fsaa 0
+            ] [                 // poor
+                minlod 25
+                fpsrange 20 25
+                watersubdiv 16
+                dynlight 0
+                waterrefract 0
+                dynshadow 0
+                lighterror 10
+                fsaa 0
+            ]
+        ]
+    ]
+        
+    if (= $new_sound_quality 3) [ // high sound
+        soundchans 64
+        maxsoundsatonce 15
+        soundbufferlen 1024
+    ] [
+        if (= $new_sound_quality 2) [ // medium
+            soundchans 32
+            maxsoundsatonce 5
+            soundbufferlen 1024
+        ] [                         // low
+            soundchans 32
+            maxsoundsatonce 5
+            soundbufferlen 2048 // causes sound lag while reducing cpu load
+        ]
+    ]
+    
+    showmenu restart
+]
+
+newmenu restart
+menuitem "You need to restart AssaultCube" "quit"
+
+
+newmenu controls
+
+menuitem "Select an action and press ENTER to set a new key-binding"
+menuitem ""
+menuitemkeyinput "forward: "        forward
+menuitemkeyinput "left: "           left
+menuitemkeyinput "backward: "       backward
+menuitemkeyinput "right: "          right
+menuitemkeyinput "attack: "         attack
+menuitemkeyinput "special action: " altaction
+menuitemkeyinput "jump: "           jump
+menuitemkeyinput "crouch: "         crouch
+menuitemkeyinput "reload: "         reload
+menuitemkeyinput "weapon menu: "    "showmenu weapons"
+menuitemkeyinput "next weapon: "     "universaldelta  1"
+menuitemkeyinput "previous weapon: " "universaldelta -1"
+menuitemkeyinput "show scores: "    showscores
+menuitemkeyinput "chat: "           saycommand
+menuitemkeyinput "team chat: "      "saycommand %"
+menuitemkeyinput "commandline: "    "saycommand /"
+menuitemkeyinput "console output: " toggleconsole
+menuitemkeyinput "screenshot: "     screenshot
+menuitemkeyinput "map overview: "   toggleshowmap
+menuitemkeyinput "drop CTF flag: "  dropflag
 
 
 newmenu gamma
