*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1522 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -497,7 +497,7 @@ menuitem "OK" [
         fpsrange 100 1000
         watersubdiv 2
         dynlight 16
-        waterrefract 1
+        waterreflect 1
         dynshadow 40
         lighterror 1
         fsaa 16
@@ -507,7 +507,7 @@ menuitem "OK" [
             fpsrange 60 60
             watersubdiv 2
             dynlight 16
-            waterrefract 1
+            waterreflect 1
             dynshadow 40
             lighterror 4
             fsaa 4
@@ -517,7 +517,7 @@ menuitem "OK" [
                 fpsrange 30 40
                 watersubdiv 4
                 dynlight 16
-                waterrefract 1
+                waterreflect 1
                 dynshadow 40
                 lighterror 4
                 fsaa 0
@@ -526,7 +526,7 @@ menuitem "OK" [
                 fpsrange 20 25
                 watersubdiv 16
                 dynlight 0
-                waterrefract 0
+                waterreflect 0
                 dynshadow 0
                 lighterror 10
                 fsaa 0
@@ -627,8 +627,8 @@ menuitem "disable dynamic light/shadows"                           "dynlight 0"
 
 newmenu "water reflection"
 
-menuitem "enable water reflection"                  "waterrefract 1"
-menuitem "disable water reflection"                 "waterrefract 0"
+menuitem "enable water reflection"                  "waterreflect 1"
+menuitem "disable water reflection"                 "waterreflect 0"
 
 newmenu "player shadows"
 
