loop command fixes
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1530 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -36,8 +36,7 @@ bind G [ if $editing [ solid 0 ] [ quicknadethrow ] ]
 lighterror 4 //set higher (for example 8) if you experience slowdown
 
 alias altaction [
-	concatword altaction_ (curweapon)
-	s
+	(concatword altaction_ (curweapon))
 ]
 
 alias quicknadethrow [ 
@@ -49,7 +48,7 @@ alias quicknadethrow [
 	onrelease [ sleep 1 [ weapon $prevweapon ] ]
 ]
 
-loop 7 [ concatword altaction_ $i; alias $s quicknadethrow ] // quick nade throw is default
+loop i 7 [ alias (concatword altaction_ $i) quicknadethrow ] // quick nade throw is default
 alias altaction_4 [ zoom 1; onrelease [ zoom 0 ] ] // sniper
 alias altaction_6 [ ] // grenade (none)
 
@@ -110,8 +109,7 @@ alias universaldelta [
   if $editing [ alias s "edit" ] [ 
     if (alive) [ alias s "game" ] [ alias s "spect" ]
   ]
-  concatword delta _ $s _ $modifier
-  s
+  (concatword delta _ $s _ $modifier)
 ]
 
 bind MOUSE4 "universaldelta  1"
