--- a/ac/config/docs.cfg
+++ b/ac/config/docs.cfg
@@ -55,10 +55,11 @@ docargument [false] [the body to execute if the condition is true] [] [0];
 docexample [if (> $x 10) [ echo x is bigger than 10 ] [ else x too small ]] [];
 
 docident [loop] [Loops the specified body.];
+docargument [I] [the alias of the current loop index] [] [0];
 docargument [N] [the amount of loops] [] [0];
 docargument [body] [the body to execute on each iteration] [] [0];
-docremark [This command sets the alias "i" from 0 to N-1 for every iteration.];
-docexample [loop 10 [ echo $i ]] [];
+docremark [This command sets the alias I from 0 to N-1 for every iteration.];
+docexample [loop i 10 [ echo $i ]] [];
 
 docident [mod] [Performs a modulo operation.];
 docargument [A] [the dividend] [] [0];
