--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -19,17 +19,13 @@ menuitem "Quit"						"quit"
 
 alias genmapitems [
     alias n (listlen $arg1)
-    loop $n [
-        at $arg1 $i
-        alias mapname $s
-        concat map $s
-        menuitem $s
+    loop i $n [
+        alias mapname (at $arg1 $i)
+        menuitem (concat map $mapname)
         alias next (+ $i 1)
         if (= $next $n) [ alias next 0 ] []
-        at $arg1 $next
-        alias nextmap $s
-        concatword nextmap_ $mapname
-        alias $s $nextmap
+        alias nextmap (at $arg1 $next)
+        alias (concatword nextmap_ $mapname) $nextmap
     ]
 ]
 
@@ -84,12 +80,9 @@ menuitem "Rabid Viper Special Forces"		"team RVSF" "chmenumdl team playermodels/
 
 
 alias gencrosshairs [
-	alias n (listlen $arg1)
-	loop $n [
-		at $arg1 $i
-		alias label $s
-		concat loadcrosshair $s
-		menuitem $label $s
+	loop i (listlen $arg1) [
+		alias label (at $arg1 i)
+		menuitem $label (concat loadcrosshair $label)
 	]
 ]
 
@@ -171,24 +164,20 @@ menuitem "bad" "alias tmp_botskill bad; showmenu_enemies"
 
 
 alias genenemyitems [
-	alias n (listlen $arg1)
-	loop $n [
-		at $arg1 $i
-		alias numplayers $s
+	loop i (listlen $arg1) [
+		alias numplayers (at $arg1 $i)
 		if (= $arg2 0) [ // DM
 			alias numplayers (- $numplayers 1) // don't count yourself as enemy
 			if (= $numplayers 1) [
-				concat $numplayers enemy
+				alias menutext (concat $numplayers enemy)
 			] [
-				concat $numplayers enemies
+				alias menutext (concat $numplayers enemies)
 			]
 		] [ // TDM
 			alias teamsize (div $numplayers 2)
-			concatword $teamsize on $teamsize
+			alias menutext (concatword $teamsize on $teamsize)
 		]
-		alias menutext $s		
-		concat "alias tmp_numbots" $numplayers "; showmenu botmaps"
-		menuitem $menutext $s
+		menuitem $menutext (concat "alias tmp_numbots" $numplayers "); showmenu botmaps"
 	]
 ]
 
@@ -202,14 +191,10 @@ genenemyitems "2 4 6 8 16 32" 1
 newmenu botmaps
 
 alias genbotmaps [
-	alias n (listlen $arg1)
-	loop $n [
-		at $arg1 $i
-		alias mapname $s
-		concat map $mapname
-		alias menutext $s
-		concat "alias tmp_botmap" $mapname "; startbotmap"
-		menuitem $menutext $s
+	loop i (listlen $arg1) [
+		alias mapname (at $arg1 $i)
+		alias menutext (concat map $mapname)
+		menuitem $menutext (concat "alias tmp_botmap" $mapname "; startbotmap")
 	]
 ]
 
