--- a/ac/config/prefabs.cfg
+++ b/ac/config/prefabs.cfg
@@ -3,9 +3,8 @@
 // archvertex <cubespan> <vertex> <delta>
 // vertices not defined have a 0 delta
 alias av [
-  loop $arg1 [
-    at $arg2 $i
-    archvertex (+ $arg1 1) (+ $i 1) $s
+  loop i $arg1 [
+    archvertex (+ $arg1 1) (+ $i 1) (at $arg2 $i)
   ]
 ]
 av  1 "2"
