--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -49,11 +49,10 @@ registersound "player/footsteps" 100 1    // S_FOOTSTEPS
 alias fade [ // 0=in, 1=out
     alias stepsize 5
     alias numsteps (div $maxmusicvol $stepsize)
-    loop (+ $numsteps 1) [
+    loop i (+ $numsteps 1) [
         alias curvol (* $i $stepsize)
         if (= $arg1 1) [ alias curvol (- $maxmusicvol $curvol) ]
-        concat musicvol ($curvol)
-        sleep (* $i 100) $s
+        sleep (* $i 100) (concat musicvol $curvol)
     ]
 ] 
 
