*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1541 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -81,7 +81,7 @@ menuitem "Rabid Viper Special Forces"		"team RVSF" "chmenumdl team playermodels/
 
 alias gencrosshairs [
 	loop i (listlen $arg1) [
-		alias label (at $arg1 i)
+		alias label (at $arg1 $i)
 		menuitem $label (concat loadcrosshair $label)
 	]
 ]
