checkbox gui element
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1542 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -7,12 +7,12 @@ newmenu main
 menuitem "Multiplayer"  	        "showmenu multiplayer"
 menuitem "Singleplayer"				"showmenu singleplayer"
 menuitem "Player Setup"				"showmenu setup"
-menuitem "Options"                  "showmenu options"
+menuitem "Settings"                 "showmenu settings"
+menuitem "Demo"                     "showmenu demo"
 menuitem "Editing"        			"showmenu editing"
 menuitem "Help"						"showmenu help"
 menuitem "About"			        "showmenu about"
 menuitem "Quit"						"quit"
-
 
 // menumdl path anim rotation-speed{0..100} scale{0..100}
 // chmenumdl menuname newpath
@@ -32,10 +32,15 @@ alias genmapitems [
 newmenu maps
 
 genmapitems "ac_complex ac_mines ac_depot ac_desert ac_desert2 ac_snow ac_power ac_elevation"
+menuitem "show all.." [showmenu "all maps"]
+
+newmenu "all maps"
+menudirlist "packages/maps" "cgz" "map $arg1"
 
 newmenu maps_ctf 
 
 genmapitems "ac_mines ac_depot ac_power ac_elevation"
+menuitem "show all.." [showmenu "all maps"]
 
 newmenu setup
 
@@ -93,10 +98,16 @@ gencrosshairs "default.png cube.png dot.png dot_wide.png o.png o_dot.png o_x.png
 
 newmenu demo
 
-menuitem "record demo"      "recorddemo"
-menuitem "stop recording"   "stopdemo"
-menuitem "list demos"       "listdemos"
-menuitem "getdemo"          "getdemo"
+menuitem "record demo"              "recorddemo"
+menuitem "play demo"                [showmenu "play demo"]
+menuitem "stop recording/playback"  "stopdemo"
+menuitem "list demos"               "listdemos"
+menuitem "getdemo"                  "getdemo"
+
+
+newmenu "play demo"
+menudirlist "demos/" "dmo" "demo $arg1"
+
 
 newmenu multiplayer
 
@@ -148,10 +159,10 @@ alias startbotmap [
 newmenu singleplayer
 
 // teamplay note mature yet
-//menuitem "Bot Team Deathmatch"				"alias tmp_mode 7; showmenu botskill"
+menuitem "Bot Team Deathmatch"				"alias tmp_mode 7; showmenu botskill"
 menuitem "Bot Deathmatch"					"alias tmp_mode 8; showmenu botskill"
 menuitem "Bot One Shot, One Kill"           "alias tmp_mode 12; showmenu botskill"
-menuitem "Empty Map"                        "showmenu maps"
+menuitem "Empty Map"                        "mode 0; showmenu maps"
 
 newmenu botskill
 
@@ -421,10 +432,13 @@ menuitem "V-19 Combat Shotgun"			"nextprimary 2;echo V-19 Combat Shotgun chosen"
 //menuitem "DR-17 HE-Grenade"			"echo DR-17 HE-Grenade chosen" "chmenumdl equipment vwep/grenade_static mapmodel 40 80"
 //menuitem "SN-Tech Kelvar Vest"			"echo SN-Tech Kelvar Vest chosen" "chmenumdl equipment pickups/kevlar mapmodel 40 20"
 
-newmenu options
+newmenu settings
 
 menuitem "quick setup.."                                            [showmenu "quick setup"]
 menuitem "keyboard/mouse controls"                                  "showmenu controls"
+menuitem "video settings"                                           "showmenu video"
+menuitem "sound settings"                                           "showmenu sound"
+menuitem "world settings"                                           "showmenu world"
 menuitem "tweak minlod.. (higher = less popup, possibly lower fps)" "showmenu minlod"
 menuitem "tweak fpsrange.. (higher = possibly more popup)"          "showmenu fpsrange"
 menuitem "tweak water subdivision"                                  "showmenu watersubdiv"
@@ -437,24 +451,12 @@ menuitem "tweak gamma"                                              "showmenu ga
 
 newmenu "quick setup"
 
-menuitemtextinput "nickname: " "unnamed" [
-    if (= $arg1 0) [ alias new_name $arg2 ] []
-]
-menuitemtextinput "screen width: " "$scr_w" [
-    if (= $arg1 0) [ alias new_scr_w $arg2 ] []
-]
-menuitemtextinput "screen height: " "$scr_h" [
-    if (= $arg1 0) [ alias new_scr_h $arg2 ] []
-]
-menuitemslider "mouse sensitivity: "2 100 "($sensitivity)" 2 "" [
-    if (= $arg1 0) [] [ alias new_sensitivity $arg3 ]
-]
-menuitemslider "graphics quality: " 1 4 "(getgfxq; $gfxq)" 1 "low medium good awesome" [
-    if (= $arg1 0) [] [ alias new_gfx_quality $arg3 ]
-]
-menuitemslider "sound quality: " 1 3 "(getsoundq; $soundq)" 1 "low medium good" [
-    if (= $arg1 0) [] [ alias new_sound_quality $arg3 ]
-]
+menuitemtextinput "nickname: " "" "name $arg1"
+menuitemtextinput "screen width: " "$scr_w" "scr_w $arg1"
+menuitemtextinput "screen height: " "$scr_h" "scr_h $arg1"
+menuitemslider "mouse sensitivity: "2 100 "($sensitivity)" 2 "" "sensitivity $arg1"
+menuitemslider "graphics detail: " 1 4 "(getgfxq; $gfxq)" 1 "low medium good best" "new_gfx_quality $arg1"
+menuitemslider "sound detail: " 1 3 "(getsoundq; $soundq)" 1 "low medium high" "new_sound_quality $arg1"
 
 alias getgfxq [
     if (= $minlod 200) [ alias gfxq 4 ] [
@@ -477,7 +479,7 @@ menuitem "OK" [
     scr_w $new_scr_w
     scr_h $new_scr_h    
 
-    if (= $new_gfx_quality 4) [ // awesome gfx quality
+    if (= $new_gfx_quality 4) [ // highest gfx quality
         minlod 200
         fpsrange 100 1000
         watersubdiv 2
@@ -506,7 +508,7 @@ menuitem "OK" [
                 dynshadow 40
                 lighterror 4
                 fsaa 0
-            ] [                 // poor
+            ] [                 // low
                 minlod 25
                 fpsrange 20 25
                 watersubdiv 16
@@ -521,17 +523,26 @@ menuitem "OK" [
         
     if (= $new_sound_quality 3) [ // high sound
         soundchans 64
-        maxsoundsatonce 15
+        maxsoundsatonce 40
         soundbufferlen 1024
+        footsteps 1
+        bulletairsound 1
+        bulletbouncesound 1
     ] [
         if (= $new_sound_quality 2) [ // medium
             soundchans 32
-            maxsoundsatonce 5
+            maxsoundsatonce 10
             soundbufferlen 1024
+            footsteps 1
+            bulletairsound 0
+            bulletbouncesound 0
         ] [                         // low
             soundchans 32
             maxsoundsatonce 5
             soundbufferlen 2048 // causes sound lag while reducing cpu load
+            footsteps 0
+            bulletairsound 0
+            bulletbouncesound 0
         ]
     ]
     
@@ -568,26 +579,27 @@ menuitemkeyinput "map overview: "   toggleshowmap
 menuitemkeyinput "drop CTF flag: "  dropflag
 
 
-newmenu gamma
+newmenu video
 
-menuitem "gamma 50"
-menuitem "gamma 60"
-menuitem "gamma 70"
-menuitem "gamma 80"
-menuitem "gamma 90"
-menuitem "gamma 100"
-menuitem "gamma 110"
-menuitem "gamma 120"
-menuitem "gamma 130"
-menuitem "gamma 140"
-menuitem "gamma 150"
-
-newmenu minlod
-
-menuitem "minimum (25)"        "minlod 25"
-menuitem "decent (60)"         "minlod 60"
-menuitem "good (100)"          "minlod 100"
-menuitem "fps be damned (250)" "minlod 250"
+menuitemtextinput "screen width: " "$scr_w" "scr_w $arg1"
+menuitemtextinput "screen height: " "$scr_h" "scr_h $arg1"
+menuitemslider "antialiasing (FSAA) :" 0 5 "$fsaa" 1 "off 2 4 8 16" [
+    alias valuemap "0 2 4 8 16"
+    fsaa (at $valuemap $arg1)
+]
+menuitemslider "gamma :" 30  300 "$gamma"  5 "" "gamma $arg1"
+menuitemslider "minimal level of detail" 25 250 "$minlod" 5 ["low" "decent" "good" "best"] [
+    alias valuemap "25 60 100 250"
+    minlod (at $valuemap $arg1)
+]
+menuitemcheckbox "water reflection: " "$waterreflect" "waterreflect $arg1"
+menuitemslider "water subdivision: " 0 4 "$watersubdiv" 1 ["lowest quality" "low quality" "medium quality" "high quality" "highest quality"] [
+    alias valuemap "16 8 4 2 1"
+    watersubdiv (at $valuemap $arg1)
+]
+menuitemcheckbox "dynamic light: " "$dynlight" [ if (= $arg1 1) [ dynlight 16 ] [ dynlight 0 ] ]
+menuitemcheckbox "dynamic shadows: " "$dynshadow" [ if (= $arg1 1) [ dynshadow 40 ] [ dynshadow 0 ] ]
+menuitemslider "light error: " 1 100 "$lighterror" 5 "" "lighterror $arg1"
 
 newmenu fpsrange
 
@@ -597,23 +609,10 @@ menuitem "sensible default (30-40)"      "fpsrange 30 40"
 menuitem "fps whore (60-60)"             "fpsrange 60 60"
 menuitem "I don't understand LOD (100+)" "fpsrange 100 1000"
 
-newmenu watersubdiv
-
-menuitem "subdivision 1  (insane polygon wastage)"  "watersubdiv 1"
-menuitem "subdivision 2  (high quality)"            "watersubdiv 2"
-menuitem "subdivision 4  (medium quality)"          "watersubdiv 4"
-menuitem "subdivision 8  (low quality)"             "watersubdiv 8"
-menuitem "subdivision 16 (my 486 can do water too)" "watersubdiv 16"
-
 newmenu dynlight
 
 menuitem "enable dynamic light/shadows"                           "dynlight 16"
 menuitem "disable dynamic light/shadows"                           "dynlight 0"
-
-newmenu "water reflection"
-
-menuitem "enable water reflection"                  "waterreflect 1"
-menuitem "disable water reflection"                 "waterreflect 0"
 
 newmenu "player shadows"
 
